--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a>
+        <ul>
+            <li><a href="./recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+            <li><a href="./recipes/broccoli-cauliflower-casserole.html">Broccoli Cauliflower Casserole</a></li>
+            <li><a href="./recipes/baked-ziti.html">Baked Ziti</a></li>
+        </ul>
     </body>
 </html>
