--- a/recipes/baked-ziti.html
+++ b/recipes/baked-ziti.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Baked Ziti</h1>
-    <img src="../images/4557541_Baked-Ziti-I-4x3-211c9826f2994845b4955c29a5079bb5.jpg" alt="Baked Ziti">
+    <img src="../images/4557541_Baked-Ziti-I-4x3-211c9826f2994845b4955c29a5079bb5.jpg" alt="Baked Ziti" height="500">
     <h2>This baked ziti is always a hit!This baked ziti is always a hit!</h2>
     <p>A lady I worked with brought this in one day, and everyone loved it. Now it is the favorite of all my dinner guests. I have made this also without the meat, and it is well received.</p>
     <h3>Ingredients</h3>
